--- a/GPS NEW/GPS_NEW/Info.plist
+++ b/GPS NEW/GPS_NEW/Info.plist
@@ -56,5 +56,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow us to access your current location so we can autofill your start/end point.</string>
 </dict>
 </plist>
